force-app/main/default/objects/Account/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <label>POC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>