force-app/main/default/objects/Account/fields/Teste_POC__c.field-meta.xml
<CustomField>
    <fullName>Teste_POC__c</fullName>
    <label>Teste POC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>